<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">MTweaks</string>
    <string name="checking_info">Checking info…</string>
    <string name="checking_root">Checking root access</string>
    <string name="searching_busybox">Searching for busybox</string>
    <string name="collecting_info">Collecting info</string>
    <string name="no_root">No root</string>
    <string name="no_busybox">No busybox</string>
    <string name="open">Open %s</string>
    <string name="disable">Disable</string>
    <string name="changelog">MTweaks v%s</string>
    <string name="changelog_message">\n* MoroSound v2.2.0: Dual Speaker, Mono and Microphone control.\n* Headphone volume up to 22db\n* Fixed force to English with latest libraries\n* Updated to SDK30, Gradle 6.7.1, and plugin 4.1.1\n\n\n</string>
    <string name="close">Close</string>
    <string name="password">Password</string>
    <string name="password_wrong">Password is wrong</string>
    <string name="select_picture">Select Picture</string>
    <string name="no_picture">No Picture</string>
    <string name="went_wrong">Something went wrong!</string>
    <string name="press_back_again_exit">Press back again to exit</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="unknown">Unknown</string>
    <string name="used">used</string>
    <string name="free">free</string>
    <string name="total">total</string>
    <string name="license_invalid">Thanks for purchasing the donation app! Unfortunately license check failed. Please try again later. If it\'s still not working, please contact me. You need internet access!</string>
    <string name="pirated">Seems like the donation app wasn\'t purchased through Play Store! If you pirated it, then shame on you!</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">This feature is only available when the donation app is installed! Don\'t worry though. Because this app is open source you can easily build it yourself and remove this check. But I hope you support developers anyway. Thanks for using Kernel Adiutor! Once you bought the donation app you have to restart Kernel Adiutor in order to enable all features.</string>
    <string name="donate_nope">I won\'t fall for this scam!</string>
    <string name="donate_yes">I love this app. Must donate!</string>
    <string name="ad_here">Your advertisement could be here</string>
    <string name="remove_ad">Remove ad</string>
    <string name="warning">Warning</string>
    <string name="gh_ad">This is a non commercial ad! Do not take this seriously! Just a funny way to fill the space when an actual ad doesn\'t load (looking at you adblock users).</string>
    <string name="open_ad_anyway">Open ad anyway</string>
    <string name="apply_on_boot">Apply on boot</string>
    <string name="apply_on_boot_text">Applying settings in %d seconds.</string>
    <string name="apply_on_boot_complete">Applying settings completed.</string>
    <string name="apply_on_boot_canceled">Applying settings canceled.</string>
    <string name="not_in_range">Not in range</string>
    <string name="options">Options</string>
    <string name="more">More</string>
    <string name="def">Default</string>
    <string name="permission_denied_write_storage">Permission denied for writing to storage!</string>
    <string name="save">Save</string>
    <string name="select_question">Select %s?</string>
    <string name="wrong_extension">Please select a file with %s extension.</string>
    <string name="mhz">MHz</string>
    <string name="celsius">ºC</string>
    <string name="fahrenheit">ºF</string>
    <string name="mb">MB</string>
    <string name="ms">ms</string>
    <string name="mv">mV</string>
    <string name="uv">µV</string>
    <string name="min">min</string>
    <string name="mah">mAh</string>
    <string name="ma">mA</string>
    <string name="kb">kB</string>
    <string name="px">px</string>
    <string name="percent">%</string>
    <string name="gb">GB</string>
    <string name="db">dB</string>
    <string name="minus" translatable="false">-</string>
    <string name="plus" translatable="false">+</string>
    <string name="statistics">Statistics</string>
    <string name="kernel">Kernel</string>
    <string name="voltage_control">Voltage Control</string>
    <string name="tools">Tools</string>
    <string name="other">Other</string>
    <string name="overall">Overall</string>
    <string name="device">Device</string>
    <string name="memory">Memory</string>
    <string name="inputs">Inputs</string>
    <string name="cpu">CPU</string>
    <string name="cpu_voltage">CPU Voltage</string>
    <string name="cpu_hotplug">CPU Hotplug</string>
    <string name="thermal">Thermal</string>
    <string name="gpu">GPU</string>
    <string name="screen">Screen</string>
    <string name="wake">Wake</string>
    <string name="sound">Sound</string>
    <string name="battery">Battery</string>
    <string name="led">LED</string>
    <string name="io_scheduler">I/O Scheduler</string>
    <string name="ksm">Kernel Samepage Merging</string>
    <string name="lmk">Low Memory Killer</string>
    <string name="virtual_memory">Virtual Memory</string>
    <string name="entropy">Entropy</string>
    <string name="misc">Misc</string>
    <string name="cpucl1_voltage">CPU big Voltage</string>
    <string name="cpucl0_voltage">CPU LITTLE Voltage</string>
    <string name="busMif_voltage">Bus MIF Voltages</string>
    <string name="busInt_voltage">Bus INT Voltages</string>
    <string name="busDisp_voltage">Bus DISP Voltages</string>
    <string name="busCam_voltage">Bus CAM Voltages</string>
    <string name="data_sharing">Data Sharing</string>
    <string name="custom_controls">Custom Controls</string>
    <string name="downloads">Downloads</string>
    <string name="backup">Backup</string>
    <string name="build_prop_editor">Build prop Editor</string>
    <string name="profile">Profile</string>
    <string name="recovery">Recovery</string>
    <string name="initd">Init.d</string>
    <string name="on_boot">On Boot</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="contributors">Contributors</string>
    <string name="help">Help</string>
    <string name="offline">Offline</string>
    <string name="core">Core %d</string>
    <string name="gpu_freq">GPU Frequency</string>
    <string name="refresh">Refresh</string>
    <string name="reset">Reset</string>
    <string name="restore">Restore</string>
    <string name="cluster_big" translatable="false">big</string>
    <string name="cluster_middle" translatable="false">Middle</string>
    <string name="cluster_little" translatable="false">LITTLE</string>
    <string name="deep_sleep">Deep sleep</string>
    <string name="uptime">Uptime</string>
    <string name="error_frequencies">Failed to load frequencies</string>
    <string name="unused_frequencies">Unused Frequencies</string>
    <string name="gpu_utilization">GPU Utilization</string>
    <string name="processor">Processor</string>
    <string name="vendor">Vendor</string>
    <string name="features">Features</string>
    <string name="ram">RAM</string>
    <string name="android_version">Android Version</string>
    <string name="android_api_level">Android SDK</string>
    <string name="android_codename">Android Codename</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="build_display_id">Build Display ID</string>
    <string name="baseband">Baseband</string>
    <string name="rom">ROM</string>
    <string name="bootloader">Bootloader</string>
    <string name="trustzone" translatable="false">TrustZone</string>
    <string name="hardware">Hardware</string>
    <string name="architecture">Architecture</string>
    <string name="asv">ASV</string>
    <string name="bus">Bus</string>
    <string name="product">Product</string>
    <string name="version">Version</string>
    <string name="sysfs" translatable="false">Sysfs</string>
    <string name="handlers">Handlers</string>
    <string name="cores_string">%s cores</string>
    <string name="frequencies_string">%s frequencies</string>
    <string name="governors_string">%s governors</string>
    <string name="cores_singular">%d core</string>
    <string name="cores">%d cores</string>
    <string name="cpu_usage">CPU Usage</string>
    <string name="cpu_usage_string">%s CPU Usage</string>
    <string name="no_offline_core">You can\'t offline this core!</string>
    <string name="cpu_max_freq">CPU Maximum Frequency</string>
    <string name="cpu_max_freq_summary">Set the maximum frequency the CPU scales up to.</string>
    <string name="cpu_min_freq">CPU Minimum Frequency</string>
    <string name="cpu_min_freq_summary">Set the minimum frequency the CPU scales down to.</string>
    <string name="cpu_max_screen_off_freq">CPU Maximum Screen Off Frequency</string>
    <string name="cpu_max_screen_off_freq_summary">Set the maximum frequency the CPU scales up to when the screen is off.</string>
    <string name="cpu_governor">CPU Governor</string>
    <string name="cpu_governor_summary">The CPU governor determines how the CPU behaves in response to changes in workload. Changing the governor will impact how the CPU scales through the frequency steps available to your CPU.</string>
    <string name="cpu_governor_tunables">CPU Governor Tunables</string>
    <string name="governor_tunables_summary">The various configuration items which are Governor-dependent.</string>
    <string name="cpu_governor_tunables_read_error">Failed to read current governor of CPU.\n\nIf you are using a QCOM big.LITTLE device this is a known problem. The system forces the CPU to turn off cores making it extremely hard to read out CPU specific stats. Try to select this option again. The CPU sometimes refuses to turn on a core.</string>
    <string name="tunables_error">%1$s is not tuneable</string>
    <string name="manual">Manual</string>
    <string name="mc_power_saving">Multicore Power Saving</string>
    <string name="mc_power_saving_summary">Try to group tasks into the least cores possible.</string>
    <string name="disabled">Disabled</string>
    <string name="enabled">Enabled</string>
    <string name="aggressive">Aggressive</string>
    <string name="power_saving_wq">Schedule workqueues on awake CPUs to save power.</string>
    <string name="cfs_scheduler_policy">CFS Scheduler Policy</string>
    <string name="cfs_scheduler_policy_summary">Policy decides the CFS scheduler how to balance tasks onto different CPU unit.</string>
    <string name="cpu_quiet">CPUQuiet</string>
    <string name="cpu_quiet_summary">CPUQuiet implements pluggable policies for forcing cpu cores into quiescent state. Appropriate policies will save power without hurting performance.</string>
    <string name="cpu_quiet_governor">CPUQuiet Governor</string>
    <string name="cpu_boost">CPU Boost</string>
    <string name="cpu_boost_summary_on">Enabled</string>
    <string name="cpu_boost_summary_off">Disabled</string>
    <string name="debug_mask">Debug Mask</string>
    <string name="debug_mask_summary">Allows you to activate debug mask for operations.</string>
    <string name="interval">Interval</string>
    <string name="interval_summary">Minimum interval a CPU is boosted.</string>
    <string name="sync_threshold">Sync Threshold</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="speaker_gain">Speaker Gain</string>
    <string name="earpiece_gain">Earpiece Gain</string>
    <string name="moro_sound_mic_tit">Adjust Microphones</string>
    <string name="moro_sound_mic_up">Mic Up</string>
    <string name="moro_sound_mic_down">Mic Down</string>
    <string name="moro_sound_mic_headphone">Mic Headphones</string>
    <string name="headphones_volume">HeadPhones</string>
    <string name="title">Title</string>
</resources>