<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_marginTop="5dp"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:foreground="?attr/selectableItemBackground"
        android:layout_width="match_parent"
        android:id="@+id/mic_sw_container"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:focusable="true"
        android:padding="10dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/maintitle"
            android:text="@string/moro_sound_mic_tit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?android:attr/textColorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switcher"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:background="@null"
                android:clickable="false"
                android:focusable="false" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/mic_up_down_container"
        android:orientation="horizontal"
        android:paddingTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/mic_up_container"
            android:orientation="vertical"
            android:layout_weight="1.0"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="?colorAccent"
                android:text="@string/moro_sound_mic_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.grx.soundcontrol.GrxVolumeItemController
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/mic_up"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:label=""
                app:refVal="128"
                app:valStep="4"
                app:refValposition="12"
                app:wheelsize="@dimen/volume_control_size"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:id="@+id/mic_down_container"
            android:orientation="vertical"
            android:layout_weight="1.0"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="?colorAccent"
                android:text="@string/moro_sound_mic_down"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.grx.soundcontrol.GrxVolumeItemController
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/mic_down"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:label=""
                app:refVal="128"
                app:valStep="4"
                app:refValposition="12"
                app:wheelsize="@dimen/volume_control_size"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/mic_headphone_container"
        android:layout_height="wrap_content">

        <TextView
            android:paddingTop="15dp"
            android:paddingBottom="8dp"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/moro_sound_mic_headphone"
            android:textColor="?colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.grx.soundcontrol.GrxVolumeItemController
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/mic_headphone"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:label=""
                app:refVal="128"
                app:valStep="4"
                app:refValposition="12"
                app:wheelsize="@dimen/volume_control_size_big"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>



